# backend/src/routes/positionRoutes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { getCandidatesByPosition, getInterviewFlowByPosition, getAllPositions, getCandidateNamesByPosition, getPositionById, updatePosition } from '../presentation/controllers/positionController';
+import { getCandidatesByPosition, getInterviewFlowByPosition, getAllPositions, getCandidateNamesByPosition, getPositionById, updatePosition, removeCandidateFromPosition } from '../presentation/controllers/positionController';
 
 const router = Router();
 
@@ -7,6 +7,7 @@ router.get('/', getAllPositions);
 router.get('/:id', getPositionById);
 router.patch('/:id', updatePosition);
 router.get('/:id/candidates', getCandidatesByPosition);
+router.delete('/:positionId/candidates/:candidateId', removeCandidateFromPosition);
 router.get('/:id/candidates/names', getCandidateNamesByPosition);
 router.get('/:id/interviewflow', getInterviewFlowByPosition);
 
